<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView
    android:id="@+id/cv_item"
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="150dp"
    android:layout_margin="5dp"
    android:elevation="1dp">

    <RelativeLayout
        android:padding="5dp"
        android:layout_width="match_parent"
        android:layout_height="match_parent">
        <TextView
            android:id="@+id/title"
            android:layout_alignParentStart="true"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textStyle="bold"
            android:textAllCaps="true"
            android:textSize="16sp"
            android:text="@string/app_name"
            android:textColor="@android:color/black"/>

        <RelativeLayout
            android:layout_alignParentBottom="true"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TextView
                android:id="@+id/comment_count"
                android:layout_alignParentStart="true"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/app_comment_count"
                android:textSize="11sp"/>

            <TextView
                android:layout_marginStart="5dp"
                android:layout_toEndOf="@+id/comment_count"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/app_comment"
                android:textSize="11sp"/>

            <TextView
                android:id="@+id/score"
                android:layout_alignParentEnd="true"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/app_score_count"
                android:textSize="11sp"/>

            <TextView
                android:layout_marginEnd="5dp"
                android:layout_toStartOf="@+id/score"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/app_score"
                android:textSize="11sp"/>

        </RelativeLayout>
    </RelativeLayout>

</androidx.cardview.widget.CardView>